--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,6 +19,7 @@ Options -Indexes
 	# Redirect Trailing Slashes...
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_URI} (.+)/$
+	RewriteRule ^(.*)$ index.php/$1 [L]
 	RewriteRule ^ %1 [L,R=301]
 
 	# Rewrite "www.example.com -> example.com"
